prevent fiat amount wrapping

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -451,6 +451,10 @@ page-home {
       margin-bottom: 2px;
     }
 
+    .wallet-name-and-credentials {
+      margin-right: 3px;
+    }
+
     .secondary-text {
       color: #aaaeb6;
       font-size: 14px;
